[project]
name = "ai-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fire>=0.7.1",
    "httpx[http2]>=0.28.1",
    "lxml>=6.0.1",
    "modal>=1.1.4",
    "numpy>=2.3.3",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "safetensors>=0.6.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
